crates/test-ui/ui/main_thread_only_not_allocable.stderr
error[E0277]: the trait bound `MainThreadOnly: mutability::MutabilityIsAllocableAnyThread` is not satisfied
 --> ui/main_thread_only_not_allocable.rs
  |
  |     let _ = MyMainThreadOnlyClass::alloc();
  |             ^^^^^^^^^^^^^^^^^^^^^ the trait `mutability::MutabilityIsAllocableAnyThread` is not implemented for `MainThreadOnly`, which is required by `MyMainThreadOnlyClass: IsAllocableAnyThread`
  |
  = help: the following other types implement trait `mutability::MutabilityIsAllocableAnyThread`:
            Immutable
            ImmutableWithMutableSubclass<MS>
            InteriorMutable
            InteriorMutableWithSubclass<S>
            InteriorMutableWithSuperclass<S>
            Mutable
            MutableWithImmutableSuperclass<IS>
            Root
  = note: required for `MyMainThreadOnlyClass` to implement `IsAllocableAnyThread`
note: required by a bound in `objc2::ClassType::alloc`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  |     fn alloc() -> Allocated<Self>
  |        ----- required by a bound in this associated function
  |     where
  |         Self: IsAllocableAnyThread + Sized,
  |               ^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassType::alloc`
